# RepoRisk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  PROJECT_NOTES.md  REVIEW_CHECKLIST.md  VALIDATION.md  VALIDATION_RESULTS.md
examples/insecure_sample/: app.py  config.yml  private_key.txt
examples/safe_sample/: app.py  config.yml
src/reporisk/: __init__.py  __main__.py  cli.py  scanner.py  severity.py
src/reporisk/reporting/: __init__.py  json_report.py  markdown.py  sarif.py
src/reporisk/rules/: __init__.py  builtin_rules.py  engine.py  python_ast.py  schema.py
src/reporisk/utils/: __init__.py  file_utils.py
tests/: test_ast_detectors.py  test_rule_engine.py  test_scanner_and_reports.py  test_secret_and_config_rules.py  test_suppression_filtering_cli_sarif.py
